# strontium

./: .gitignore  Cargo.toml  Makefile  Xargo.toml  arm-none-eabi.json  build.sh  core-rebuild.sh  dis.asm  layout.ld  run.sh  strontium.ld
.cargo/: config
allocator/: Cargo.toml  arm-none-eabi.json
allocator/src/: lib.rs
docs/: .kernel.tex.swp
elf/: ckernel.elf  kernel.elf
raspbootin/: Cargo.toml
raspbootin/src/: lib.rs
src/: gpio.rs  init.s  interrupts.rs  kernel.c  kernel.rs  lang_items.rs  lib.rs  macros.rs  print.rs  rpi_const.rs  rpi_timer.rs  syscall.rs  timer.rs
src/mailbox/: interface.rs  mod.rs  tags.rs
src/mem/: kernel.rs
src/uart/: channel.rs  iter.rs  mod.rs
strontium-std/: Cargo.toml
strontium-std/src/: lib.rs
user-programs/: add_one.ld  add_one.s  build.sh
